save or update pjservices for property